Coffee/02Week/02week_day01-examples/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/private/var/folders/xh/8chcc9994n36pvg54mqqqzwh0000gq/T/AppTranslocation/1B02747E-4C6C-439A-9F60-961EB9A375B1/d/BlueJ.app/Contents/JDK/Home/bin/javadoc
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
/private/var/folders/xh/8chcc9994n36pvg54mqqqzwh0000gq/T/AppTranslocation/1B02747E-4C6C-439A-9F60-961EB9A375B1/d/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/private/var/folders/xh/8chcc9994n36pvg54mqqqzwh0000gq/T/AppTranslocation/1B02747E-4C6C-439A-9F60-961EB9A375B1/d/BlueJ.app/Contents/Resources/Java/junit-4.11.jar:/private/var/folders/xh/8chcc9994n36pvg54mqqqzwh0000gq/T/AppTranslocation/1B02747E-4C6C-439A-9F60-961EB9A375B1/d/BlueJ.app/Contents/Resources/Java/hamcrest-core-1.3.jar:/private/var/folders/xh/8chcc9994n36pvg54mqqqzwh0000gq/T/AppTranslocation/1B02747E-4C6C-439A-9F60-961EB9A375B1/d/BlueJ.app/Contents/Resources/Java/lang-stride.jar:/private/var/folders/xh/8chcc9994n36pvg54mqqqzwh0000gq/T/AppTranslocation/1B02747E-4C6C-439A-9F60-961EB9A375B1/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.base.jar:/private/var/folders/xh/8chcc9994n36pvg54mqqqzwh0000gq/T/AppTranslocation/1B02747E-4C6C-439A-9F60-961EB9A375B1/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.controls.jar:/private/var/folders/xh/8chcc9994n36pvg54mqqqzwh0000gq/T/AppTranslocation/1B02747E-4C6C-439A-9F60-961EB9A375B1/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.fxml.jar:/private/var/folders/xh/8chcc9994n36pvg54mqqqzwh0000gq/T/AppTranslocation/1B02747E-4C6C-439A-9F60-961EB9A375B1/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.graphics.jar:/private/var/folders/xh/8chcc9994n36pvg54mqqqzwh0000gq/T/AppTranslocation/1B02747E-4C6C-439A-9F60-961EB9A375B1/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.media.jar:/private/var/folders/xh/8chcc9994n36pvg54mqqqzwh0000gq/T/AppTranslocation/1B02747E-4C6C-439A-9F60-961EB9A375B1/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.properties.jar:/private/var/folders/xh/8chcc9994n36pvg54mqqqzwh0000gq/T/AppTranslocation/1B02747E-4C6C-439A-9F60-961EB9A375B1/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.swing.jar:/private/var/folders/xh/8chcc9994n36pvg54mqqqzwh0000gq/T/AppTranslocation/1B02747E-4C6C-439A-9F60-961EB9A375B1/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.web.jar:/Users/kendra/OneDrive - University of Southern California/00_itp265/20203_blueJ/GetterSetterExtension.jar:/Volumes/GoogleDrive/My Drive/00_Classes/itp-265/00_sections/20211/lectureCode/coffee/02week_day01-examples
-d
/Volumes/GoogleDrive/My Drive/00_Classes/itp-265/00_sections/20211/lectureCode/coffee/02week_day01-examples/doc
-encoding
UTF-8
-charset
UTF-8
/Volumes/GoogleDrive/My Drive/00_Classes/itp-265/00_sections/20211/lectureCode/coffee/02week_day01-examples/Student.java
<---- end of javadoc command ---->
Loading source file /Volumes/GoogleDrive/My Drive/00_Classes/itp-265/00_sections/20211/lectureCode/coffee/02week_day01-examples/Student.java...
/Volumes/GoogleDrive/My Drive/00_Classes/itp-265/00_sections/20211/lectureCode/coffee/02week_day01-examples/Student.java:38: error: reached end of file while parsing
    }
     ^
1 error
